# biber-ai-platform

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml  readme-reinstantiate.md  readme-resume-biber.md  requirements-api.txt  requirements-training.txt
.github/: copilot-instructions.md
app/: agent_sessions.py  auth.py  azure_backup.py  config.py  github_client.py  llm.py  main.py  model_registry.py  repo_context.py  scheduler.py  test_diagnosis.py  test_runner.py  workspace_edit.py  xriq_client.py
biber-starter/: .env.example  README.md  docker-compose.yml  requirements-api.txt  requirements-worker.txt
docker/: api.Dockerfile  worker.Dockerfile
docs/: API_EXAMPLES.md  ARCHITECTURE.md  BIBER_AGENT_API_AND_MENTOR_STRATEGY.md  BIBER_CAPABILITY_ROADMAP.md  BIBER_LIVE_PROVIDER_RUNBOOK.md  BIBER_ONLY_WORKSPACE.md  BIBER_REPO_ADAPTATION.md  BIBER_VAST_COST_SAVING_RESUME.md  CODEX_HANDOFF.md  GEMINI_CODE_ASSIST_BIBER_PROMPT.md  GEMINI_CODE_ASSIST_XRIQ_PROMPT.md  NEXT_STEPS_ON_GPU.md  (+49 more)
xriq/: .dockerignore  Cargo.toml  Dockerfile  README.md
xriq/apps/explorer-ui/: index.html  package-lock.json  package.json  vite.config.ts
xriq/apps/explorer-ui/scripts/: check-block-production-admin-refresh-live.mjs  check-block-production-no-pending-live.mjs  check-block-production-ui-control.mjs  check-block-production-ui-live.mjs  check-canonical-signing-hash.mjs  check-phase1-3-wallet-behavior-live.mjs  check-postgres-ui-state.mjs  check-static.mjs  check-wallet-key-safety.mjs  check-wallet-send-accepted-contract.mjs  check-wallet-send-refresh-live.mjs  check-wallet-send-ui-control.mjs  check-wallet-send-ui-live.mjs  check-wallet-submit-accepted-contract.mjs
xriq/apps/explorer-ui/src/: App.tsx  admin.tsx  api.ts  audit.tsx  canonical.ts  faucet.tsx  iso.tsx  mempool.tsx  signing.ts  snapshots.tsx  styles.css  wallet.tsx
xriq/crates/xriq-api/: Cargo.toml
xriq/crates/xriq-api/src/: lib.rs  main.rs
xriq/crates/xriq-consensus/: Cargo.toml
xriq/crates/xriq-consensus/src/: lib.rs
xriq/crates/xriq-core/: Cargo.toml
xriq/crates/xriq-core/src/: address.rs  amount.rs  block.rs  config.rs  environment.rs  hash.rs  lib.rs  state.rs  transaction.rs
xriq/crates/xriq-crypto/: Cargo.toml
xriq/crates/xriq-crypto/src/: lib.rs
xriq/crates/xriq-explorer/: Cargo.toml
xriq/crates/xriq-explorer/src/: lib.rs
xriq/crates/xriq-indexer/: Cargo.toml
xriq/crates/xriq-indexer/src/: lib.rs  main.rs  postgres.rs
xriq/crates/xriq-iso20022/: Cargo.toml
xriq/crates/xriq-iso20022/src/: lib.rs
xriq/crates/xriq-ledger/: Cargo.toml
xriq/crates/xriq-ledger/src/: lib.rs
xriq/crates/xriq-mempool/: Cargo.toml
xriq/crates/xriq-mempool/src/: lib.rs
xriq/crates/xriq-node/: Cargo.toml
xriq/crates/xriq-node/src/: lib.rs  main.rs
xriq/crates/xriq-rpc/: Cargo.toml
xriq/crates/xriq-rpc/src/: lib.rs
xriq/crates/xriq-storage/: Cargo.toml
xriq/crates/xriq-storage/src/: lib.rs
xriq/crates/xriq-wallet/: Cargo.toml
xriq/crates/xriq-wallet/src/: lib.rs  main.rs
xriq/db/: schema.sql
xriq/fixtures/phase1_1/: account-detail.json  account-history.json  admin-indexer-status.json  block-detail.json  block-list.json  explorer-overview.json  iso20022-account-statement.json  iso20022-payment-initiation-preview.json  iso20022-transaction-status.json  transaction-detail.json  wallet-transaction-status.json  wallet-transfer-draft.json  wallet-transfer-send.json  wallet-transfer-submit.json
xriq/fixtures/phase1_2/: block-production-audit-expectation.json  block-production-disabled.json  pending-to-confirmed-loop-contract.json  wallet-transfer-send-audit-expectation.json  wallet-transfer-send-disabled.json  wallet-transfer-send-to-pending-contract.json  wallet-transfer-submit-audit-expectation.json  wallet-transfer-submit-disabled.json  wallet-transfer-submit-to-pending-contract.json
xriq/fixtures/phase1_3/: local-wallet-behavior-v1.json
xriq/fixtures/phase1_4/: local-signing-intent.json  signed-submit-accepted-contract.json  signed-submit-disabled.json  signed-submit-invalid-signature.json  signed-submit-negative-cases.json  test-only-signed-transfer-envelope.json
xriq/fixtures/private-devnet/: node-account-alice-initial.json  node-block-detail-transfer.json  node-mempool-empty.json  node-preflight-transfer.json  node-produce-pending-block.json  node-produce-transfer-block.json  node-status-empty.json  wallet-chain-check-empty.json  wallet-send-pending.json  wallet-transfer-submit.json
(+201 files in other folders)
