[workspace]
members = [
    "crates/xriq-core",
    "crates/xriq-consensus",
    "crates/xriq-api",
    "crates/xriq-crypto",
    "crates/xriq-explorer",
    "crates/xriq-indexer",
    "crates/xriq-ledger",
    "crates/xriq-mempool",
    "crates/xriq-node",
    "crates/xriq-rpc",
    "crates/xriq-storage",
    "crates/xriq-wallet",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "UNLICENSED"
repository = "https://github.com/selvasmallive/biber-ai-platform"
