[package]
name = "xriq-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "XRIQ private-devnet product API service boundary."

[dependencies]
xriq-core = { path = "../xriq-core" }
xriq-indexer = { path = "../xriq-indexer" }
xriq-storage = { path = "../xriq-storage" }
