[package]
name = "xriq-indexer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "XRIQ private-devnet deterministic read-model indexer."

[dependencies]
xriq-core = { path = "../xriq-core" }
xriq-crypto = { path = "../xriq-crypto" }
xriq-ledger = { path = "../xriq-ledger" }
xriq-storage = { path = "../xriq-storage" }
