[package]
name = "xriq-node"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "XRIQ private-devnet local node loop."

[dependencies]
xriq-consensus = { path = "../xriq-consensus" }
xriq-core = { path = "../xriq-core" }
xriq-crypto = { path = "../xriq-crypto" }
xriq-explorer = { path = "../xriq-explorer" }
xriq-ledger = { path = "../xriq-ledger" }
xriq-mempool = { path = "../xriq-mempool" }
xriq-rpc = { path = "../xriq-rpc" }
xriq-storage = { path = "../xriq-storage" }
