[package]
name = "xriq-wallet"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "XRIQ private-devnet wallet CLI."

[dependencies]
xriq-crypto = { path = "../xriq-crypto" }
xriq-core = { path = "../xriq-core" }
xriq-node = { path = "../xriq-node" }
